--- a/style.css
+++ b/style.css
@@ -2,4 +2,42 @@ body {
   font-family: "Roboto", sans-serif; 
   color: #2E2F42;;
 }
+body {
+  font-family: "Roboto", sans-serif; 
+  color: #2E2F42;;
+}
+
+.h1 {
+   color: #fff; 
+   font-size: 56px;
+   text-align: center; 
+   font-weight: 700;
+}
+
+.h2 {
+   color: #2E2F42;
+   text-align: center;
+   font: 36px;
+   font-weight: 700;
+}
+
+.h3 {
+    font-size: 20px;
+    font-weight: 500;
+    color: #2E2F42;
+    line-height: 24px
+}
+
+.p { 
+  font-family: "Roboto" sans-serif;
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.img {
+  height: 264;
+  width: 260;
+}
 
