--- a/style.css
+++ b/style.css
@@ -1,43 +1,19 @@
 body {
   font-family: "Roboto", sans-serif; 
-  color: #2E2F42;;
-}
-body {
-  font-family: "Roboto", sans-serif; 
-  color: #2E2F42;;
+  color: #434455;
+  background-color: #FFFFFF;
 }
 
-.h1 {
-   color: #fff; 
-   font-size: 56px;
-   text-align: center; 
-   font-weight: 700;
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
-.h2 {
-   color: #2E2F42;
-   text-align: center;
-   font: 36px;
-   font-weight: 700;
+.secondpartlogo {
+  color: #2e2f42;
 }
-
-.h3 {
-    font-size: 20px;
-    font-weight: 500;
-    color: #2E2F42;
-    line-height: 24px
-}
-
-.p { 
-  font-family: "Roboto" sans-serif;
-    color: #434455;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-}
-
-.img {
-  height: 264;
-  width: 260;
-}
-
