--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,12 @@ color: #2e2f42;
 .menu-link {
   font-size: "Roboto", sans-serif;
   font-size: 16px;
-  font-weight: 700;
   line-height: 1.5;
   letter-spacing: 0.02cm;
   text-align: left;
   color: #2e2f42;
   text-decoration: none;
+  font-weight: 500
 }
 
 .menu-link:hover,
@@ -89,9 +89,9 @@ color: #434455;
   font-style: normal;
   font-weight: 700;
   line-height: 60px;
-  line-height: 1.07;
   color: #ffffff;
   text-align: center;
+  letter-spacing: 0.02em;
   }
 
   .button {
