--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ ul {
 
 .list {
   list-style-type: none;
+  background-color: #FFFFFF;
 }
 
 .logotype-span {
@@ -116,10 +117,12 @@ color: #434455;
       font-style: normal;
       font-weight: 700;
       line-height: 40px;
-      line-height: 0.72px ;
+      line-height: 1.11 ;
       text-transform: capitalize;
       text-align: center;
       color: #2e2f42;
+      letter-spacing: 0.02em;
+
   }
 
   .list-title {
@@ -150,8 +153,14 @@ color: #434455;
     line-height: 24px;
   }
 
+  .section-3 {
+    background-color: #F4F4FD;
+  }
 
-
+  .img {
+    width: 264;
+    height: 300px
+  }
 
 
 
