--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ color: #434455;
   font-size: 56px;
   font-style: normal;
   font-weight: 700;
-  line-height: 60px;
+  line-height: 1.07
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.02em;
@@ -132,6 +132,7 @@ color: #434455;
       font-weight: 500;
       line-height: 24px;
       letter-spacing: 0.4px;
+      color: #2e2f42;
   }
 
   .list-text {
@@ -158,7 +159,6 @@ color: #434455;
   }
 
   .img {
-    width: 264;
   }
 
 
