--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ color: #434455;
   font-size: 56px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1.07
+  line-height: 1.07;
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.02em;
