--- a/css/styles.css
+++ b/css/styles.css
@@ -150,15 +150,17 @@ color: #434455;
   }
 
   .logotype-text {
-    letter-spacing: 0.02;
-    line-height: 24px;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
   }
 
   .section-3 {
     background-color: #F4F4FD;
   }
 
-  .img {
+  .footer-logotype-span {
+    color: #f4f4fd;
+    
   }
 
 
