--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ color: #2e2f42;
   font-size: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02cm;
+  letter-spacing: 0.02em;
   text-align: left;
   color: #2e2f42;
   text-decoration: none;
