--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ img {
   width: 1158px;
   margin-left: auto;
   margin-right: auto;
-  padding: 16px;
+  padding-left: 16px;
   padding-right: 16px;
   display: flex;
 }
