--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ img {
   list-style-type: none;
   background-color: #FFFFFF;
   display: flex;
+  gap: 40px;
+  margin-right: 0;
 }
 
 .list-container {
@@ -100,6 +102,8 @@ img {
   color: #2e2f42;
   text-decoration: none;
   font-weight: 500
+  padding-top: 24px; 
+  padding-bottom: 24px;
 }
 
 .menu-link:hover,
