--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ padding-bottom: 120px;
   background-color: #404bbf;
 }
 
-.subtitle {
+.subtitle .visually-hidden{
   font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-style: normal;
@@ -197,7 +197,7 @@ padding-bottom: 120px;
   text-align: center;
   color: #2e2f42;
   letter-spacing: 0.02em;
-  margin-bottom: 72px
+  margin-bottom: 72px;
 }
 
 .list-title {
