--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,7 @@ padding-bottom: 120px;
   line-height: 24px;
   letter-spacing: 0.4px;
   color: #2e2f42;
+  margin-bottom: 8px
 }
 
 .list-text {
