--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,8 @@ img {
 .list-container {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  gap: 40px;
+  margin-right: 0;
 }
 
 .logotype-span {
