--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ padding-bottom: 120px;
   background-color: #404bbf;
 }
 
-.subtitle, .visually-hidden{
+.subtitle.visually-hidden{
   font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-style: normal;
@@ -238,3 +238,8 @@ padding-bottom: 120px;
 .footer-logotype-span {
   color: #f4f4fd;
 }
+
+.img-container {
+
+}
+
