--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ padding-bottom: 120px;
   background-color: #404bbf;
 }
 
-.subtitle.visually-hidden{
+.subtitle{
   font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-style: normal;
