--- a/css/styles.css
+++ b/css/styles.css
@@ -254,3 +254,13 @@ row-gap: 48px;
 .footer-logotype-span {
   color: #f4f4fd;
 }
+
+ .visually-hidden {
+   position: absolute;
+   widht: 1px;
+   height: 1px;
+   margin: -1px
+   padding: 0;
+   overflow: hidden;
+   clip: rect
+ }
