--- a/css/styles.css
+++ b/css/styles.css
@@ -259,8 +259,8 @@ row-gap: 48px;
    position: absolute;
    widht: 1px;
    height: 1px;
-   margin: -1px
+   margin: -1px;
    padding: 0;
    overflow: hidden;
-   clip: rect
+   clip: rect;
  }
