--- a/css/styles.css
+++ b/css/styles.css
@@ -5,46 +5,12 @@ body {
   font-size: 16px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-
 ul,ol {
   list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
 }
 
 img {
   display: block;
-}
-
-.container {
-  width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-}
-
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-  padding-bottom: 24px;
-  padding-top: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
 }
 
 .nav-link {
@@ -54,39 +20,11 @@ img {
 .list {
   list-style-type: none;
   background-color: #FFFFFF;
-  display: flex;
-  margin-right: 0 ;
-  gap: 40px;
-}
-
-.list-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin-right: 0;
 }
 
 .logotype-span {
   color: #2e2f42;
 }
-
-.page-navigator {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 452px;
-  justify-content: space-between;
-}
-.menu {
-  display: flex;
-  gap: 40px;
-  margin-right: 0;
-}
-
-.menu li {
-margin-right: 0;
-}
-
 
 .logotype {
   font-family: "Raleway", sans-serif;
@@ -97,9 +35,6 @@ margin-right: 0;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4D5AE5;
-  margin-right: 76px;
-  display: inline-block;
-  margin-bottom: 16px;
 }
 
 .menu-link {
@@ -110,9 +45,7 @@ margin-right: 0;
   text-align: left;
   color: #2e2f42;
   text-decoration: none;
-  font-weight: 500;
-  padding-top: 24px; 
-  padding-bottom: 24px;
+  font-weight: 500
 }
 
 .menu-link:hover,
@@ -120,20 +53,9 @@ margin-right: 0;
   color: #404bbf;
 }
 
-.menu-contact {
-  display: flex;
-  gap: 40px;
-  margin-right: 0;
-}
-
 .menu-contact:hover,
 .menu-contact:focus {
   color: #404bbf;
-}
-
-.address {
-  font-style: normal;
-  display: flex;
 }
 
 .contact-information {
@@ -149,17 +71,6 @@ margin-right: 0;
 }
 
 /* HERO SECTION */
-
-.first-section {
-  background-color: #2e2f42;
-  padding-top: 188px; 
-  padding-bottom: 188px;)
-}
-
-.section {
-padding-top: 120px;
-padding-bottom: 120px;
-}
 
 
 .page-title {
@@ -183,10 +94,6 @@ padding-bottom: 120px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #FFFFFF;
-  min-width: 169px;
-  height: 56px;
-  border: none; 
-  border-radius: 4px;
 }
 
 .button:hover,
@@ -194,19 +101,17 @@ padding-bottom: 120px;
   background-color: #404bbf;
 }
 
-.subtitle{
+.subtitle {
   font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
   line-height: 40px;
   line-height: 1.11;
-  text-transform: capitalize;
-  text-align: center;
+  text-transform: capitalize;;
   color: #2e2f42;
   letter-spacing: 0.02em;
-  margin-bottom: 72px;
-  flex-basis: calc((100% - 72px)/4));
+
 }
 
 .list-title {
@@ -217,7 +122,6 @@ padding-bottom: 120px;
   line-height: 24px;
   letter-spacing: 0.4px;
   color: #2e2f42;
-  margin-bottom: 8px
 }
 
 .list-text {
@@ -229,17 +133,8 @@ padding-bottom: 120px;
   letter-spacing: 0.32px;
 }
 
-.list-item {
-width: calc((100% - 3 * 24px) / 4));
-row-gap: 48px;
-}
-
-
-
 .page-footer {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .logotype-text {
@@ -254,13 +149,3 @@ row-gap: 48px;
 .footer-logotype-span {
   color: #f4f4fd;
 }
-
- .visually-hidden {
-   position: absolute;
-   widht: 1px;
-   height: 1px;
-   margin: -1px;
-   padding: 0;
-   overflow: hidden;
-   clip: rect;
- }
