--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ a {
   font-size: 56px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1.07;
+  line-height: 60;
   color: #ffffff;
   letter-spacing: 0.02em;
   text-align: center;
@@ -122,8 +122,8 @@ a {
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.4px;
+  line-height: 24;
+  letter-spacing: 0.4em;
   color: #2e2f42;
 }
 
@@ -132,8 +132,8 @@ a {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  line-height: 24;
+  letter-spacing: 0.32em;
 }
 
 .page-footer {
