--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,28 @@ body {
   font-size: 16px;
 }
 
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.container {
+  wight: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 ul,ol {
   list-style-type: none;
   background-color: #FFFFFF;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
 }
 
 a {
