--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,11 @@ p {
   wight: 1158px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px; 
+  padding-right: 15px;
+  display: flex;
 }
+
 
 ul,ol {
   list-style-type: none;
@@ -28,6 +32,10 @@ ul,ol {
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 0;
+}
+
+img {
+  display: block;
 }
 
 a {
