--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ p {
   padding-left: 15px; 
   padding-right: 15px;
   display: flex;
-  justify-content: space-between
 }
 
 
@@ -33,6 +32,7 @@ ul,ol {
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 0;
+   justify-content: space-between;
 }
 
 img {
