--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,16 @@ a {
   background-color: #ffffff;
 }
 
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+  padding-bottom: 24px;
+  padding-top: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
 .logotype-span {
   color: #2e2f42;
 }
