--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,10 @@ margin-right: 0;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #FFFFFF;
+  min-width: 169px;
+  border: none;
+  height: 56px;
+  border-radius: 4px
 }
 
 .button:hover,
