--- a/css/styles.css
+++ b/css/styles.css
@@ -246,9 +246,12 @@ margin-right: 0;
     height: 1px;
     margin: -1px;
     padding: 0;
-    overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%)
+    clip rect(0 0 0 0);
+    overflow: hidden;
  }
 
 
