--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,8 @@ margin-right: 0;
 
 .third-section {
  background-color: #F4F4FD;
+ padding-top: 120px; 
+ padding-bottom: 120px;
 }
 
 .section-list {
