--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ margin-right: 0;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 72px;
 }
 
 .page-footer {
