--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ margin-right: 0;
   letter-spacing: 0.02em;
   text-align: center;
   background-color: #FFFFFF;
+  margin-bottom: 72px;
 }
 
 .list-title {
