--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ margin-right: 0;
   border-bottom-left-radius: 4px;
 }
 
-.list-div {
+.list-image {
   padding-top: 32px; 
   padding-bottom: 32px;
 }
