--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,8 @@ margin-right: 0;
 
 .page-footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .logotype-text {
