--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,8 @@ a {
   text-transform: uppercase;
   color: #4D5AE5;
   margin-right: 76px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .list-container {
