--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ margin-right: 0;
   background-color: #FFFFFF;
 }
 
-.second-section {
+.page-footer {
   background-color: #FFFFFF;
   padding-top: 120px;
   padding-bottom: 120px;
