--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,8 @@ margin-right: 0;
   letter-spacing: 0.02em; 
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
+  
 }
 
 .list-text {
