--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ a {
   background-color: #ffffff;
   gap: 24px;
   margin-right: 24px;
-  margin-right: 0;
   width: calc((100% - 72px) / 4); 
 }
 
@@ -95,6 +94,7 @@ display: flex;
 gap: 40px;
 margin-right: 0;
 align-items: center;
+margin-top: 15px;
 }
 
 
