--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,8 @@ margin-top: 15px;
 
 .fourth-section {
   background-color: #FFFFFF;
+  padding-top: 120px; 
+  padding-bottom: 120px
 }
 
 .visually-hidden {
