--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,6 @@ margin-top: 15px;
 .list-image {
   padding-top: 32px; 
   padding-bottom: 32px;
-  border: 1px solid #e7e9fc;
 }
 
 .list-div {
@@ -294,4 +293,11 @@ margin-top: 15px;
 
 .div {
   padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+}
+
+.fourth-section-list {
+   flex-wrap: wrap;
+   display: flex;
+   row-gap: 48px;
 }
