--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,6 @@ margin-top: 15px;
   width:calc((100% - 3 * 24px) / 4);
 }
 
-.section-list {
+.second-list {
    width:calc((100% - 3 * 24px) / 4);
 } 
