--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ margin-top: 15px;
 .third-list {
   border-bottom-left-radius: 4px;
   width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .list-image {
