--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,8 @@ display: flex;
 gap: 40px;
 margin-right: 0;
 align-items: center;
-margin-top: 15px;
+margin-top: 23px;
+margin-left: 200px
 }
 
 
