--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ margin-left: 200px
   border: 0;
   padding: 0;
   white-space: nowrap;
-  clip-path: inset(100%)
+  clip-path: inset(100%);
   clip rect(0 0 0 0);
   overflow: hidden;
  }
