--- a/css/styles.css
+++ b/css/styles.css
@@ -318,3 +318,17 @@ visually-hidden {
   list-style: none;
   background-color: #ffffff;
 } 
+
+.second-logotype {
+   font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4D5AE5;
+  margin-right: 76px;
+  margin-bottom: 16px;
+  display: inline-block;
+}
