--- a/css/styles.css
+++ b/css/styles.css
@@ -261,16 +261,16 @@ margin-left: 200px
   padding-bottom: 120px
 }
 
-visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
-  height: 1px;
+  heigth: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
-  clip rect(0 0 0 0);
+  clip: rect(0 0 0 0);
   overflow: hidden;
  }
 
