--- a/css/styles.css
+++ b/css/styles.css
@@ -312,7 +312,7 @@ margin-left: 200px
 }
 
 .second-list {
-   width: calc((100% - 3 * 24px) / 4);
+  flex-basis: calc((100% - 72px) / 4));
    gap: 24px;
    margin-right: 24px;
   list-style: none;
