--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ p {
 
 ul,ol {
   list-style-type: none;
-  background-color: #FFFFFF;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
@@ -284,7 +283,7 @@ gap: 40px;
 }
 
 .fourth-list {
-  width: calc((100% - 72px) / 4);
+  width: calc((100% - 48px) / 3);
   gap: 24px;
   list-style: none;
   background-color: #ffffff;
@@ -306,4 +305,11 @@ gap: 40px;
   margin-right: 76px;
   margin-bottom: 16px;
   display: inline-block;
+}
+
+.team-list-title {
+
+}
+
+.team-list-text {
 }
