--- a/css/styles.css
+++ b/css/styles.css
@@ -308,8 +308,21 @@ gap: 40px;
 }
 
 .team-list-title {
-
+font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
 }
 
 .team-list-text {
+font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+    text-align: center;
 }
