--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ gap: 40px;
   min-width: 169px;
   border: none;
   height: 56px;
-  border-radius: 4px
+  border-radius: 4px.;
   margin: auto;
   display: block;
 }
