--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,7 @@ font-family: "Roboto", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-list-text {
