--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ gap: 40px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  width: 264px
 }
 
 .page-footer {
@@ -310,7 +311,6 @@ font-family: "Roboto", sans-serif;
   letter-spacing: 0.02em;
   text-align: center;
   margin-bottom: 8px;
-  
 }
 
 .team-list-text {
@@ -321,6 +321,7 @@ font-family: "Roboto", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.02em;
     text-align: center;
+  width: 264px;
 }
 
 .display {
