--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ gap: 40px;
 .logotype-text {
   letter-spacing: 0.02em;
   line-height: 1.5;
+  max-width: 264px;
 }
 
 .footer-logotype-span {
@@ -297,6 +298,7 @@ gap: 40px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4D5AE5;
+  display: inline-block;
   margin-bottom: 16px
  
 }
@@ -326,8 +328,4 @@ font-family: "Roboto", sans-serif;
 .display {
  display: flex;
  aling-items: center;
-}
-
-.second-class {
-   display: inline-block;
 }
