--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ gap: 40px;
 .third-list {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  background-color: #ffffff;
+  background-color: #FFF;
 }
 
 .list-image {
