--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,22 @@ a {
   align-items: center;
 }
 
+.nav-list {
+   position: relative;
+  color: #404bbf;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+ ::after {
+ content: ";
+ position: absolute; 
+ left: 0;
+ bottom: -1px; 
+ height: 4px;
+ border-radius: 2px;
+ }
+
 .page-header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
