--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ a {
   color: #404bbf;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 
  ::after {
