--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,9 @@ gap: 40px;
   font-weight: 500;
   padding-top: 24px;
   padding-bottom: 24px;
+  position: relative;
+  color: #404bbf; 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .menu-link:hover,
@@ -117,6 +120,7 @@ gap: 40px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .contact-information:hover,
