--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ gap: 40px;
    background-color: #2e2f42;
    padding-top: 188px;
    padding-bottom: 188px;
+   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office 1.jpg)
 }
 
 
