--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,11 @@ gap: 40px;
    background-color: #2e2f42;
    padding-top: 188px;
    padding-bottom: 188px;
-   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office 1.jpg)
+   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office 1.jpg);
+   max-width: 1440px;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
 }
 
 
@@ -168,6 +172,7 @@ gap: 40px;
   border-radius: 4px;
   margin: auto;
   display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
