--- a/css/styles.css
+++ b/css/styles.css
@@ -355,3 +355,13 @@ backgound-color: #fffff;
 .team-li {
   background-color: #fffff;
 }
+
+.icons-div {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd; 
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
