--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ gap: 40px;
    padding-bottom: 188px;
    max-width: 1440px; 
    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office 1.jpg);
+   background-repeat: no-repeat;
 }
 
 
