--- a/css/styles.css
+++ b/css/styles.css
@@ -134,11 +134,11 @@ gap: 40px;
    background-color: #2e2f42;
    padding-top: 188px;
    padding-bottom: 188px;
-   max-width: 1440px; 
-   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office 1.jpg);
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office 1.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 
