--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,24 @@ backgound-color: #fffff;
   gap: 24px;
 }
 
+.social-links {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+   border-radius: 50%;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+.social-links:hover {
+  background-color: #404bbf;
+}
+
+.social-links:focus {
+  background-color: #404bbf;
+}
+
 .social-li {
   width: 40px;
   height: 40px;
