--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,7 @@ backgound-color: #fffff;
 .social-li {
   width: 40px;
   height: 40px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-svg {
