--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ gap: 40px;
   padding-bottom: 24px;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  color: #404bbf;
 }
 
 .menu-link:hover,
