--- a/css/styles.css
+++ b/css/styles.css
@@ -46,11 +46,12 @@ a {
   align-items: center;
 }
 
- ::after {
+ .current::after {
  content:"";
  position: absolute; 
  left: 0;
  bottom: -1px; 
+  width: 100%;
  height: 4px;
  border-radius: 2px;
  background-color: #404bbf;
@@ -89,6 +90,7 @@ gap: 40px;
 }
 
 
+
 .menu-link {
   font-size: "Roboto", sans-serif;
   font-size: 16px;
@@ -102,11 +104,15 @@ gap: 40px;
   padding-bottom: 24px;
   position: relative;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #404bbf;
 }
 
 .menu-link:hover,
 .menu-link:focus {
+  color: #404bbf;
+}
+
+.current {
+  position:relative;
   color: #404bbf;
 }
 
