--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ gap: 40px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-information:hover,
