--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ gap: 40px;
   padding-top: 24px;
   padding-bottom: 24px;
   position: relative;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
