--- a/css/styles.css
+++ b/css/styles.css
@@ -311,11 +311,10 @@ gap: 40px;
   width: calc((100% - 48px) / 3);
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   transform: translateY(0%);
 }
 
 .fourth-list:hover {
-   box-shadow: ;
+  transform: translateY(0%);
 }
 
 .second-list {
@@ -412,4 +411,13 @@ backgound-color: #fffff;
 
 .social-svg {
    fill: #f4f4fd;
+}
+
+.overlay-div {
+  position: relative;
+  overflow: hidden; 
+}
+
+.overlay:hover {
+  transform: translateY(0%);
 }
