--- a/css/styles.css
+++ b/css/styles.css
@@ -417,6 +417,20 @@ backgound-color: #fffff;
   position: relative;
   overflow: hidden; 
 }
+.overlay {
+  position: absolute;
+   top: 0; 
+   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+   color: #f4f4fd;
+   padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%; 
+  width: 100%;
+  transform: translateY(100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
 
 .overlay:hover {
   transform: translateY(0%);
