--- a/css/styles.css
+++ b/css/styles.css
@@ -429,7 +429,7 @@ backgound-color: #fffff;
   height: 100%; 
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay:hover {
