--- a/css/styles.css
+++ b/css/styles.css
@@ -440,3 +440,16 @@ backgound-color: #fffff;
 display: flex;
  align-items: baseline;
 }
+
+.footer-div {
+  margin-right: 120px
+}
+
+.footer-text {
+   font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   margin-bottom: 16px;
+}
