--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,21 @@ backgound-color: #fffff;
   gap: 24px;
 }
 
+.social-menu-links {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+   border-radius: 50%;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+.social-menu-links: hover,
+.social-menu-links: focus {
+   background-color: #31d0aa;
+}
+
 .social-links {
   width: 100%;
   height: 100%;
@@ -457,4 +472,8 @@ align-items: baseline;
 .social-media-list {
   display: flex;
   gap: 16px;
+}
+
+.media {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
