--- a/css/styles.css
+++ b/css/styles.css
@@ -477,4 +477,6 @@ align-items: baseline;
 
 .social-list-li {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 40px;
+  height: 40px;
 }
