--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,7 @@ backgound-color: #fffff;
   display: flex; 
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-menu-links:hover,
@@ -475,8 +476,7 @@ align-items: baseline;
   gap: 16px;
 }
 
-.social-menu-li {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.social-list-li {
   width: 40px;
   height: 40px;
 }
