--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,7 @@ backgound-color: #fffff;
   display: flex; 
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .social-links:hover,
