--- a/css/styles.css
+++ b/css/styles.css
@@ -450,7 +450,7 @@ backgound-color: #fffff;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay:hover {
+.fourth-list:hover .overlay {
   transform: translateY(0%);
 }
 
