--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ gap: 40px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100%
+  width: 100%;
   
 }
 
