--- a/css/styles.css
+++ b/css/styles.css
@@ -137,16 +137,15 @@ gap: 40px;
 /* HERO SECTION */
 
 .section {
-   background-color: #2e2f42;
-   padding-top: 188px;
-   padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-  max-width: 1440px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  
+ background-color: #2e2f42;
+ padding-top: 188px;
+ padding-bottom: 188px;
+ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+ max-width: 1440px;
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover;
+ margin: 0 auto;
 }
 
 
@@ -426,6 +425,7 @@ backgound-color: #fffff;
   width: 40px;
   height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 8px;
 }
 
 .social-svg {
