--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,12 @@ body {
 
 /* Common styles */
 
+@media screen and (min-width: 328px) {
+  .container {
+    width: 288px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     width: 736px;
