--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,8 @@ body {
 @media screen and (min-width: 328px) {
   .container {
     width: 288px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
