--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,11 @@ body {
 }
 
 /* Common styles */
-
+/* Header Mobile Styles */
+  .menu {
+    display: none;
+  }
+/* Header Mobile Styles */
 @media screen and (min-width: 328px) {
   .container {
     width: 288px;
