--- a/css/styles.css
+++ b/css/styles.css
@@ -52,19 +52,20 @@ body {
   overflow: hidden;
 }
 
+.container {
+  max-width: 320px
+  padding-left: 16px
+  padding-right: 16px
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Common styles */
 /* Header Mobile Styles */
   .menu {
     display: none;
   }
 /* Header Mobile Styles */
-@media screen and (min-width: 328px) {
-  .container {
-    width: 288px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
 
 @media screen and (min-width: 768px) {
   .container {
