--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,13 @@ h5,
 h6,
 p {
   margin-top: 0;
-  margin-botton: 0;
+  margin-bottom: 0;
 }
 
 ul,
 ol {
   margin-top: 0;
-  margin-botton: 0;
+  margin-bottom: 0;
   padding: 0;  
 }
 
