--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,9 @@ body {
 }
 
 .container {
-  max-width: 320px
-  padding-left: 16px
-  padding-right: 16px
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
 }
