--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,6 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     width: 736px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
 .menu {
@@ -81,7 +79,7 @@ body {
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
