--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,10 @@ body {
 
 .container {
   max-width: 320px;
-  margin-left: auto;
-  margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .menu {
