--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
   display: none;
 }
 
+
 .logotype {
   font-size: 18px;
   font-weight: 700;
@@ -78,6 +79,7 @@ body {
   line-height: 0,86;
   letter-spacing: 0,03em;
   color: #2E2F42;
+}
 }
 
 @media screen and (min-width: 768px) {
