--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ img {
 
 button {
   cursor: pointer;
+   border: none;
 }
 
 li {
@@ -98,6 +99,7 @@ body {
 
 .mobile-open-button-icon {
   stroke: #2F2F37;
+   border: none;
 }
 
 @media screen and (min-width: 768px) {
