--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ body {
   color: #2E2F42;
 }
 
-.mobile-open-btn {
+.mobile-open-button {
   border: none;
   background-color: transparent;
   padding: 0;
