--- a/css/styles.css
+++ b/css/styles.css
@@ -74,19 +74,19 @@ body {
 
 
 .logotype {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 0,86;
-  letter-spacing: 0,03em;
-  color: #4D5AE5;
+color: #4D5AE5;
+font-size: 18px;
+font-weight: 700;
+line-height: 21px; 
+letter-spacing: 0.54px;
 } 
 
 .logotype-span {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 0,86;
-  letter-spacing: 0,03em;
-  color: #2E2F42;
+font-size: 18px;
+font-weight: 700;
+line-height: 21px; 
+letter-spacing: 0.54px;
+color: #2E2F42;
 }
 
 .mobile-open-button {
