--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ font-weight: 700;
 line-height: 0.86;
 letter-spacing: 0.03em;
 color: #4D5AE5;
+margin-top: 17.5;
 }
 
 
@@ -88,6 +89,7 @@ font-weight: 700;
 line-height: 0.86;
 letter-spacing: 0.03em;
 color: #2E2F42;
+margin-top: 17.5px;
 }
 
 .mobile-open-button {
@@ -95,6 +97,7 @@ color: #2E2F42;
   background-color: transparent;
   padding: 0;
   line-height: 0;
+  margin-top: 16px;
 }
 
 .mobile-open-button-icon{
