--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body {
   display: none;
 }
 
-.page-header {
+.page-header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
