--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,26 @@ color: #2E2F42;
   stroke: #2F2F37;
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%
+  z-index: 99999999999;
+  background-color: #FFF;
+}
+
+.mobile-menu-close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  line-height: 0;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
