--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,8 @@ color: #2E2F42;
   height: 100%
   z-index: 99999999999;
   background-color: #FFF;
-  transform: translateX(100%) 
+  transform: translateX(100%);
+  translate: transform 250ms linear;
 }
 
 .mobile-menu-container {
