--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background: #0E1823;
-  font-family: "Inter", sans-serif;\
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   line-height: 22.4px;
   font-weight: 400;
