--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,89 @@ a {
   padding-left: 25px;
 }
 
-@media screen and (max-width: 767px) {
+.reviews-section-li-title {
+   color: #040306;
+   text-align: center;
+   font-family: Inter;
+   font-size: 18px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 110%;
+   letter-spacing: -0.36px;
+   margin-top: 24px;
 }
 
-@media screen and (min-width: 768px) {
+ .reviews-text {
+   color: #b1aaaa;
+   text-align: center;
+   font-family: Inter;
+   font-size: 12px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 14px;
+   letter-spacing: -0.24px;
+   margin-bottom:40px;
+   width: 335px;
+ }
+
+.reviews-section-li-text{
+  color: rgba(4, 3, 6, 0.40);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: -0.32px;
+  margin-top: 8px;
+  width: 303px;
+}
+
+
+@media screen and (max-width: 767px) {
+   .reviews {
+    padding-top: 80px;
+    padding-bottom: 80px
+   }
+  .reviews-section-li {
+    border-radius: 24px;
+    background: #FBFBFB;
+    width: 335px;
+    height: 282px;
+    padding: 32px 8px;
+    gap: 8px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+  .reviews-section-list {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+  }
+
+  .reviews-title {
+    color: #FBFBFB;
+    font-family: Inter;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px; /* 100% */
+    letter-spacing: -0.56px;
+    width: 335px;
+    margin-bottom: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px){
    .container {
     max-width: 768px;
     padding-right: 25px;
